Fix spacing at top & bottom of content

--- a/site/src/components/SidebarAndContent.scss
+++ b/site/src/components/SidebarAndContent.scss
@@ -40,6 +40,10 @@ $sidebar-content-gap: $ca-grid * 2;
   }
 }
 
+.contentInner {
+  margin: ($ca-grid * 4) 0;
+}
+
 // Sidebar styles
 
 .sidebar {
